// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project ZirconDB {
  database_type: 'SQLite'
  Note: '''
    Site/Mobile para Cadastro de Serviço de Oferta de Empregos/Serviços e procura de serviços.
    Mais voltando para serviços home office, como produção de conteúdo, design, programação, etc.

    Site: para cadastro e gerência de serviços ofertados por empresas que procuram profissionais, com foco em home office.
    Mobile: para cadastro de quem procura serviços, com foco em home office.
  '''
}

/*
    O usuário pode se cadastrar no sistema com email e senha (web e mobile) e,
     depois completar seu perfil com informações adicionais.

      PROFISSIONAL: Uso sempre pelo celular (implementação futura: também mexer pelo web);
      ADMIN e EMPRESA: Uso sempre pelo web;

    //A validação do CPF ou CNPJ deve ser realizada pelo backend, no momento do cadastro do usuário.
     O backend deve validar o CPF ou CNPJ e, caso seja inválido, retornar um erro para o frontend.  

     Fluxo do Sistema: Usuário se cadastra com email e senha; Se candidato pode ver as vagas disponíveis;
                       a EMPRESA pode criar vagas; Se administrador pode gerenciar usuários e vagas.
                       O PROFISSIONAL pode se candidatar a vagas, mas não pode criar ou gerenciar vagas. 
                       O EMPRESA pode criar e gerenciar vagas, mas não pode se candidatar a vagas.
                       O ADMIN pode gerenciar usuários e vagas, mas não pode se candidatar a vagas nem criar vagas.
                       Quando um PROFISSIONAL se candidata a uma vaga, o EMPRESA recebe uma notificação por e-mail 
                       e pode visualizar o perfil do PROFISSIONAL e o PROFISSIONAL passa a ver o e-mail da empresa.
    
    O sistema vai deixar para implementação futura a possbilidade bate-bapo pelo sistema entre o PROFISSIONAL e a EMPRESA,
     mas não vai permitir que o ADMIN veja as conversas. Nesse momentos a conversas entre o PROFISSIONAL e a EMPRESA,
      acontecem pelo e-mail ou telefone depois do STATUS da candidatura ser alterado para APROVADA.
    O sistema vai permitir que o PROFISSIONAL e a EMPRESA troquem mensagens de maneira privada.   
*/

//Tabela com o cadastro dos usuários do sistema (ADMIN, EMPRESA, PROFISSIONAL).
Table users {
  id integer [primary key]
  email text [not null, unique, note: "O email é usado como login do usuário."]
  verified_email integer [not null, default: 0, note: "0 = não verificado, 1 = verificado"]
  code_email_verification text [note: "Código de verificação enviado por email. Se o usuário for verificado, este campo será nulo."]
  password text [not null, default: "Senha123!", note: "Senha criptografada. Não é possível recuperar a senha original."]
  user_type text [not null, default: "PROFISSIONAL", note: "Ex: ADMIN, EMPRESA, PROFISSIONAL", checks: "user_type IN ('ADMIN', 'EMPRESA', 'PROFISSIONAL')"]
  status text [not null, default: 'ATIVO', note: "Status do usuário.", checks: "status IN ('ATIVO', 'INATIVO', 'BLOQUEADO')"]
  full_name text [note: "Nome completo do usuário."]
  avatar_url text [note: "URL da imagem de avatar/foto do usuário."]
  bio text [note: "Breve descrição do usuário."]
  phone_number text [note: "Número de telefone do usuário. Padrão internacional: (11)99999-9999 ou (11)9999-9999"]
  document_type text [default: "CPF", note: "Tipo de documento do usuário. Ex: CPF, CNPJ, Passaporte. PROFISSIONAL: sempre CPF, EMPRESA: CPF ou CNPJ", checks: "document_type IN ('CPF', 'CNPJ', 'Passaporte')"]
  document_number text [not null, note: "Número do documento do usuário."]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_users_updated_at."]
  deleted_at text [note: "ISO-8601 UTC. Null = ativo, preenchido = excluído logicamente"]

  indexes {
    email [name: "idx_user_email"]
    user_type [name: "idx_user_type"]
    status [name: "idx_user_status"]
    full_name [name: "idx_user_full_name"]
    document_number [name: "idx_user_document_number"]
    deleted_at [name: "idx_user_deleted_at"]
  }

  records (id, email, verified_email, password, user_type, status, full_name, bio, phone_number, document_type, document_number, created_at, updated_at) {
     1, 'admin@admin.com', 1, 'Senha123!', 'ADMIN', 'ATIVO', 'Administrador do Sistema', 'Administrador do sistema Zircon.', '(11)99999-9999', 'CPF', '12345678900', '2024-01-01T00:00:00Z', '2024-01-01T00:00:00Z'
  }
}

//Tabela de vagas de emprego disponíveis no sistema. Somente A EMPRESA podem criar, atualizar e "deletar" vagas.
// O PROFISSIONAL apenas visualiza as vagas.
Table oportunities {
  id integer [primary key]
  user_id integer [not null, note: "ID do usuário que criou a vaga. Somente EMPRESA podem criar vagas."]
  company_sector text [note: "Ex: Tecnologia, Saúde, Educação, Varejo, Indústria, Serviços, etc."]
  job_title text [not null, note: "Ex: Desenvolvedor(a) Front-end, Analista de Marketing, Enfermeiro(a), Vendedor(a), etc."]
  job_description text [note: "Descrição detalhada da vaga, incluindo responsabilidades, requisitos, etc."]
  payment_value real [note: "Ex: R$ 3.000,00, R$ 5.000,00, R$ 7.500,00, etc."]
  benefits_text text [note: "Ex: Computador, Cadeira, Planos de Saude e Vida, etc."]
  work_modality text [not null, default: 'HOME_OFFICE', note: "Modalidade de trabalho.", checks: "work_modality IN ('HOME_OFFICE', 'HIBRIDO', 'PRESENCIAL')"]
  status text [not null, default: 'ATIVA', note: "Status da vaga.", checks: "status IN ('ATIVA', 'PAUSADA', 'FINALIZADA', 'CANCELADA')"]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_vacancies_updated_at."]
  deleted_at text [note: "ISO-8601 UTC. Null = ativo, preenchido = excluído logicamente"]

  indexes {
    user_id [name: "idx_opportunity_user_id"]
    job_title [name: "idx_opportunity_job_title"]
    company_sector [name: "idx_opportunity_company_sector"]
    payment_value  [name: "idx_opportunity_payment_value"]
    work_modality [name: "idx_opportunity_work_modality"]
    status [name: "idx_opportunity_status"]
    created_at [name: "idx_opportunity_created_at"]
    deleted_at [name: "idx_opportunity_deleted_at"]
  }
}

// Candidaturas de profissionais às vagas disponíveis.
Table applications {
  id integer [primary key]
  user_id integer [not null, note: "ID do profissional que se candidatou."]
  vacancy_id integer [not null, note: "ID da vaga à qual o profissional se candidatou."]
  status text [not null, default: "PENDENTE", note: "Status da candidatura.", checks: "status IN ('PENDENTE', 'EM_ANALISE', 'APROVADA', 'REJEITADA', 'CANCELADA')"]
  expiration_date text [note: "Data de expiração da candidatura. Se a candidatura não for analisada até esta data, ela será automaticamente cancelada."]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_applications_updated_at."]
  deleted_at text [note: "ISO-8601 UTC. Null = ativo, preenchido = excluído logicamente"]

  indexes {
    user_id [name: "idx_application_user_id"]
    vacancy_id [name: "idx_application_vacancy_id"]
    (user_id, vacancy_id) [unique, name: "uq_application_user_vacancy"]
    status [name: "idx_application_status"]
    expiration_date [name: "idx_application_expiration_date"]
    created_at [name: "idx_application_created_at"]
    deleted_at [name: "idx_application_deleted_at"]
  }
}

ref: oportunities.user_id > users.id [delete: restrict, update: cascade] // [note: 'Somente usuários do tipo EMPRESA podem criar vagas.']
ref: applications.user_id > users.id [delete: restrict, update: cascade] // [ note: 'Somente usuários do tipo PROFISSIONAL podem se candidatar a vagas.']
ref: applications.vacancy_id > oportunities.id [delete: cascade, update: cascade] // [note: 'A candidatura está vinculada a uma vaga específica.']



/* 
   Habilitar o PRAGMA foreign_keys = ON.
   
   Regras de cascade:
   - oportunities.user_id: RESTRICT (não permite deletar empresa com vagas)
   - applications.user_id: RESTRICT (não permite deletar profissional com candidaturas)
   - applications.vacancy_id: CASCADE (deletar vaga remove candidaturas)
   
   A atualização de updated_at é feita por trigger no banco (ver schema.sql),
   para acontecer automaticamente em qualquer alteração do registro.

*/


